fix: alter drawer and modal select bar dimensions
adjust the css for the task item details drawer to
prevent long descriptions/notes text from pushing
the header's task arrow off screen when expanded.

remove the height limit on the task drawer to
expand as deep as content goes.

flip the grid-template-columns order on task list
headers to make the arrow stay fixed and allow the
title to fill the rest of the space -- this was
needed due to the above changes altering the
original spacing.

prevent long titles in the new task modal's task
list dropdown box from expanding the modal's
window when too long.

--- a/src/style.css
+++ b/src/style.css
@@ -237,6 +237,16 @@ does not stretch beyond its container */
   pointer-events: auto;
 }
 
+/* control task list select dropdown bar size */
+#taskListSelection {
+  max-width: 100%;
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: inline-block;
+}
+
 .unassignedTasks.hidden {
   display: none;
 }
@@ -252,7 +262,7 @@ does not stretch beyond its container */
 /* ---(with above) all task list css settings--- */
 .taskListHeader {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: auto 1fr;
   align-items: start;
   cursor: pointer;
   margin-bottom: 0.25rem;
@@ -373,9 +383,14 @@ does not stretch beyond its container */
 .taskItem.expanded .taskDetails {
   /* adjust max-height depending on content */
   display: block;
-  max-height: 300px;
+  /* remove the height limit of the section */
+  max-height: none;
   opacity: 1;
   padding: 10px 15px;
+  /* ensures long unbroken text wraps */
+  overflow-wrap: break-word;
+  /* breaks long words if needed */
+  word-break: break-word;
 }
 
 /* ---settings for checkbox--- */
